# kakehashi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix  schema.json  scrum.ts
.github/workflows/: ci.yaml  release.yaml
benches/: README.md  collect_semantic_pairs.py  compare_head_vs_main.sh  semantic_summary.py  semantic_tokens.rs  test_collect_semantic_pairs.py  test_semantic_summary.py  tree_worker_stage1.rs  tree_worker_stage2.rs  tree_worker_stage6.rs
benches/profile/: README.md  analyze.py  analyze_worker_proxy.py  attest_worker_binary.py  collect_worker_capture_pilot.py  collect_worker_cold_start.py  collect_worker_memory.py  collect_worker_memory_stress.py  collect_worker_proxy.py  collect_worker_shadow.py  compare_worker_handshake.py  compare_worker_startup.py  drive.py  gen_session.py  process_test_utils.py  profile.sh  test_analyze_worker_proxy.py  test_attest_worker_binary.py  test_collect_worker_cold_start.py  test_collect_worker_memory.py  test_collect_worker_memory_stress.py  test_collect_worker_proxy.py  test_collect_worker_shadow.py  test_compare_worker_handshake.py  test_compare_worker_startup.py  test_drive.py  test_worker_proxy.py  tree_worker_startup.rs  worker_proxy.py  xctrace.sh
benches/results/: semantic-rejected-hot-path-trials-2026-07-23.md
benches/support/: dirty_footprint.rs  semantic_baseline.rs
docs/: README.md  language-features.md
docs/adr/: 0004-keep-tree-sitter-cli-dependency.md  0005-language-detection-fallback-chain.md  0007-language-server-bridge-virtual-document-model.md  0010-configuration-merging-strategy.md  0011-wildcard-config-inheritance.md  0019-lazy-node-identity-tracking.md  0021-semantic-token-overlap-resolution.md  0024-base-language-inheritance.md  0025-node-reference-protocol.md  0026-host-document-bridge.md  _0012-multi-ls-async-bridge-architecture.md
docs/architecture-decisions/: aggregation-priorities-wildcard.md  base-language-inheritance.md  capability-tier-parse-decoupling.md  captures-protocol.md  concatenated-formatting-pipeline.md  configuration-merging-strategy.md  cross-layer-aggregation.md  cross-layer-semantic-token-merge.md  downstream-diagnostic-refresh-handling.md  downstream-settings-propagation.md  hierarchical-cli-subcommands.md  host-document-bridge.md  http-archive-primary-source-acquisition.md  injection-token-cache-reuse.md  language-detection-fallback-chain.md  language-install-operation-locking.md  language-server-bridge-request-strategies.md  language-server-bridge-virtual-document-model.md  language-server-bridge.md  lazy-node-identity-tracking.md  lexical-name-resolution.md  ls-bridge-async-connection.md  ls-bridge-client-progress.md  ls-bridge-graceful-shutdown.md  ls-bridge-implementation-phasing.md  ls-bridge-message-ordering.md  ls-bridge-progress-disconnect-cleanup.md  ls-bridge-server-pool-coordination.md  ls-bridge-timeout-hierarchy.md  ls-bridge-work-done-progress.md  lua-host-api.md  node-reference-protocol.md  packed-captures-protocol.md  parse-decoupled-document-lifecycle.md  parse-snapshot-architecture.md  per-document-parse-actor.md  per-document-parse-scheduler.md  pull-first-diagnostic-forwarding.md  push-propagation-diagnostic-forwarding.md  query-execution-protocol.md  (+39 more)
examples/: tree_worker_memory_stress.rs
scripts/: minimal_init.el  minimal_init.lua  test_e2e_parallel.sh
src/: allocation_profile.rs  analysis.rs  cancel.rs  cli.rs  compute_pool.rs  config.rs  document.rs  error.rs  experimental.rs  install.rs  language.rs  lib.rs  lsp.rs  text.rs  tree_worker.rs
src/analysis/: bindings.rs  offset_calculator.rs  result_id.rs  selection.rs  semantic.rs  semantic_cache.rs
src/cli/: diagnose.rs  files.rs  format.rs  terminal.rs
src/config/: defaults.rs  deprecation.rs  expand.rs  merge.rs  settings.rs  user.rs
src/document/: injections.rs  model.rs  snapshot.rs  store.rs
src/install/: cache.rs  http.rs  metadata.rs  operation_lock.rs  parser.rs  queries.rs  support_check.rs
src/language/: config_store.rs  coordinator.rs  embedded_queries.rs  events.rs  failed_parsers.rs  filetypes.rs  heuristic.rs  injection.rs  loader.rs  node_tracker.rs  parser_pool.rs  predicate_accessor.rs  query_assets.rs  query_exec.rs  query_loader.rs  query_pattern_splitter.rs  query_predicates.rs  query_store.rs  region_id_tracker.rs  registry.rs
src/lsp/: aggregation.rs  auto_install.rs  bridge.rs  cache.rs  client.rs  debounced_diagnostics.rs  diagnostic_cache.rs  diagnostic_order.rs  in_progress_set.rs  ingress_order.rs  lsp_impl.rs  request_id.rs  semantic_request_tracker.rs  settings.rs  settings_manager.rs  stdout_metrics.rs  synthetic_diagnostics.rs  text_sync.rs
src/text/: char_boundary.rs  edit.rs  hash.rs  position.rs
tests/: e2e_cli_diagnose.rs  e2e_cli_format.rs  e2e_code_action.rs  e2e_code_lens_resolve.rs  e2e_concatenated_formatting.rs  e2e_config_file.rs  e2e_data_dir.rs  e2e_deprecation_warning.rs  e2e_didchange_forwarding.rs  e2e_didclose_forwarding.rs  e2e_host_bridge.rs  e2e_incremental_sync.rs  e2e_kakehashi_captures.rs  e2e_kakehashi_node.rs  e2e_kakehashi_node_accessors.rs  e2e_kakehashi_query.rs  e2e_layers_and_allowlist.rs  e2e_lsp_capability.rs  e2e_lsp_lua_color_presentation.rs  e2e_lsp_lua_completion.rs  e2e_lsp_lua_declaration.rs  e2e_lsp_lua_definition.rs  e2e_lsp_lua_diagnostic.rs  e2e_lsp_lua_document_color.rs  e2e_lsp_lua_document_highlight.rs  e2e_lsp_lua_document_link.rs  e2e_lsp_lua_document_symbol.rs  e2e_lsp_lua_folding_range.rs  e2e_lsp_lua_formatting.rs  e2e_lsp_lua_hover.rs  e2e_lsp_lua_implementation.rs  e2e_lsp_lua_inlay_hint.rs  e2e_lsp_lua_moniker.rs  e2e_lsp_lua_range_formatting.rs  e2e_lsp_lua_references.rs  e2e_lsp_lua_rename.rs  e2e_lsp_lua_signature_help.rs  e2e_lsp_lua_type_definition.rs  e2e_lsp_outside_injection.rs  e2e_lsp_protocol.rs  (+25 more)
tests/grammars/tree-sitter-dockerfile/: Cargo.toml  build.rs
tests/grammars/tree-sitter-dockerfile/bindings/rust/: lib.rs
tests/helpers/: lsp_client.rs  lsp_polling.rs  lua_bridge.rs  mod.rs  text.rs
(+838 files in other folders)
