[package]
name = "kakehashi"
version = "0.8.0"
edition = "2024"
default-run = "kakehashi"

[[bin]]
name = "kakehashi"
path = "src/bin/main.rs"

# Mock downstream LSP formatter driven by the concatenated-formatting E2E
# tests (tests/e2e_concatenated_formatting.rs) via CARGO_BIN_EXE_mock-lsp-formatter.
# Gated on the e2e feature so normal builds don't ship it.
[[bin]]
name = "mock-lsp-formatter"
path = "tests/bin/mock_formatter.rs"
required-features = ["e2e"]
test = false
bench = false

# Profiling build: optimized like release but with debug symbols retained (not
# stripped) so flamegraph/samply + atos can symbolicate the semantic-tokens hot
# path. Build with `cargo build --profile profiling --bin kakehashi`.
[profile.profiling]
inherits = "release"
debug = true
strip = false

# Optimize the tree-sitter query engine (and the regex crate used by query
# predicates) in dev/test builds. Tree-sitter query compilation
# (`ts_query__perform_analysis`, bundled C in the `tree-sitter` crate) runs at
# every server spawn; unoptimized it dominates per-spawn latency (~160ms for the
# first semantic-tokens response in a debug build). The E2E suite spawns the
# binary hundreds of times, so this repeated tax is large. Scoped to these
# specific crates (not all deps) so the one-time clean-build cost stays small
# while THIS crate stays unoptimized for fast incremental compiles. Applied to
# both dev and test profiles so `cargo build` and `cargo test` both benefit.
[profile.dev.package.tree-sitter]
opt-level = 3

[profile.dev.package.regex]
opt-level = 3

[profile.test.package.tree-sitter]
opt-level = 3

[profile.test.package.regex]
opt-level = 3

[dependencies]
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dirs = "6"
indexmap = "2"
env_logger = "0.11"
libloading = "0.9"
line-index = "0.1"
log = "0.4"
lua-pattern = { version = "0.1", features = ["to-regex"] }
path-clean = "1"
regex = "1"
schemars = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
# regex-fancy (pure Rust) over regex-onig (C oniguruma): we only compile
# first-line-match regexes for language detection, never highlighting, so
# fancy-regex's rare Sublime-syntax incompatibilities don't apply (covered by
# a heuristic.rs test that compiles every first-line regex in the syntax set).
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-fancy"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-fancy"] }
# Sync-by-design HTTP client: kakehashi's install paths are blocking CLI code,
# and reqwest::blocking's internal tokio runtime conflicted with the LSP
# runtime (see src/bin/main.rs runtime setup). platform-verifier keeps the
# OS-trust-store TLS posture reqwest(rustls) had (src/install/http.rs).
ureq = { version = "3", features = ["platform-verifier"] }
serde_json = "1"
shellexpand = "3"
similar = "3"
flate2 = "1"
fs4 = "0.12"
# Gitignore-respecting file walker for `kakehashi format <paths...>`; also
# provides the gitignore-style Override matcher backing --excludes.
ignore = "0.4"
# Floor 0.4.46: RUSTSEC-2026-0067/0068 + GHSA-3pv8-6f4r-ffg2 — kakehashi
# unpacks network-downloaded parser archives, so tar extraction CVEs apply.
tar = "0.4.46"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "time", "process", "fs", "signal"] }
tokio-util = "0.7"
toml = "1"
tower = { version = "0.5", default-features = false }
tower-lsp-server = "0.23"
tree-sitter = "0.26"
tree-sitter-loader = "0.26"
tree-sitter-tsquery = "0.8"
ulid = "1"
url = "2"
percent-encoding = "2"
rayon = "1"
futures = "0.3.31"

# Unix-only dependencies (signal handling; "fs" for FD_CLOEXEC in tests)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process", "fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[features]
e2e = []

# Unix-only dev dependencies: pipe() for deterministic broken-pipe tests,
# Signal::SIGPIPE for asserting the termination signal.
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31", features = ["fs", "signal"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tree-sitter-rust = "0.24"
tree-sitter-md = "0.5"
tree-sitter-yaml = "0.7"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-go = "0.25"
tree-sitter-lua = "0.5"
streaming-iterator = "0.1"
filetime = "0.2"
insta = { version = "1", features = ["json", "redactions"] }
serial_test = "3"
rstest = "0.26"

# A/B performance comparison of the semantic-tokens hot path across two server
# binaries (e.g. HEAD vs origin/main). Custom harness (no criterion): it drives
# the compiled `kakehashi` binary over LSP, so it benchmarks the real process
# without needing access to pub(crate) internals. See benches/semantic_tokens.rs.
[[bench]]
name = "semantic_tokens"
harness = false
